workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/CapitalSegurado__c.field-meta.xml
<CustomField>
    <fullName>CapitalSegurado__c</fullName>
    <label>CapitalSegurado</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>