workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <label>CloseDate</label>
    <type>Date</type>
</CustomField>