workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/Congenere__c.field-meta.xml
<CustomField>
    <fullName>Congenere__c</fullName>
    <label>Congenere</label>
    <length>255</length>
    <type>Text</type>
</CustomField>