workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <label>ContractId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>