workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/CorretorPrincipal__c.field-meta.xml
<CustomField>
    <fullName>CorretorPrincipal__c</fullName>
    <label>CorretorPrincipal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>