workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/CusteioSegurado__c.field-meta.xml
<CustomField>
    <fullName>CusteioSegurado__c</fullName>
    <label>CusteioSegurado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>