workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/CusteioSubEstipulante__c.field-meta.xml
<CustomField>
    <fullName>CusteioSubEstipulante__c</fullName>
    <label>CusteioSubEstipulante</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>