workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/CustoApolice__c.field-meta.xml
<CustomField>
    <fullName>CustoApolice__c</fullName>
    <label>CustoApolice</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>