workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/DataCalculo__c.field-meta.xml
<CustomField>
    <fullName>DataCalculo__c</fullName>
    <label>DataCalculo</label>
    <type>Date</type>
</CustomField>