workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/DataCancelamento__c.field-meta.xml
<CustomField>
    <fullName>DataCancelamento__c</fullName>
    <label>DataCancelamento</label>
    <type>Date</type>
</CustomField>