workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/DataCriacaoPortal__c.field-meta.xml
<CustomField>
    <fullName>DataCriacaoPortal__c</fullName>
    <label>DataCriacaoPortal</label>
    <type>Date</type>
</CustomField>