workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/Dependentes__c.field-meta.xml
<CustomField>
    <fullName>Dependentes__c</fullName>
    <label>Dependentes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>