workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/DescontoAgravoComercial__c.field-meta.xml
<CustomField>
    <fullName>DescontoAgravoComercial__c</fullName>
    <label>DescontoAgravoComercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>