workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/DescontoAgravoMonetarioInformado__c.field-meta.xml
<CustomField>
    <fullName>DescontoAgravoMonetarioInformado__c</fullName>
    <label>DescontoAgravoMonetarioInformado</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>