workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/DescontoPremioComercial__c.field-meta.xml
<CustomField>
    <fullName>DescontoPremioComercial__c</fullName>
    <label>DescontoPremioComercial</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>