workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/Destino__c.field-meta.xml
<CustomField>
    <fullName>Destino__c</fullName>
    <label>Destino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>