workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/EventoLocalFechadoDelimitado__c.field-meta.xml
<CustomField>
    <fullName>EventoLocalFechadoDelimitado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EventoLocalFechadoDelimitado</label>
    <type>Checkbox</type>
</CustomField>