workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/FaixaIdade__c.field-meta.xml
<CustomField>
    <fullName>FaixaIdade__c</fullName>
    <label>FaixaIdade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>