workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/FaixaRenda__c.field-meta.xml
<CustomField>
    <fullName>FaixaRenda__c</fullName>
    <label>FaixaRenda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>