workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/FormaCusteio__c.field-meta.xml
<CustomField>
    <fullName>FormaCusteio__c</fullName>
    <label>FormaCusteio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>