workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/FormaTrabalho__c.field-meta.xml
<CustomField>
    <fullName>FormaTrabalho__c</fullName>
    <label>FormaTrabalho</label>
    <length>255</length>
    <type>Text</type>
</CustomField>