workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/HaControlePublico__c.field-meta.xml
<CustomField>
    <fullName>HaControlePublico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HaControlePublico</label>
    <type>Checkbox</type>
</CustomField>