workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/IncluiPaisEuropeu__c.field-meta.xml
<CustomField>
    <fullName>IncluiPaisEuropeu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IncluiPaisEuropeu</label>
    <type>Checkbox</type>
</CustomField>