workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/InformacoesEvento__c.field-meta.xml
<CustomField>
    <fullName>InformacoesEvento__c</fullName>
    <label>InformacoesEvento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>