workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/Iof__c.field-meta.xml
<CustomField>
    <fullName>Iof__c</fullName>
    <label>Iof</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>