workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/Juros__c.field-meta.xml
<CustomField>
    <fullName>Juros__c</fullName>
    <label>Juros</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>