workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/JustificativasPareceres__c.field-meta.xml
<CustomField>
    <fullName>JustificativasPareceres__c</fullName>
    <label>JustificativasPareceres</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>