workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/LivreEscolha__c.field-meta.xml
<CustomField>
    <fullName>LivreEscolha__c</fullName>
    <label>LivreEscolha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>