workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/MultiploSalarial__c.field-meta.xml
<CustomField>
    <fullName>MultiploSalarial__c</fullName>
    <label>MultiploSalarial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>