workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <label>Numero</label>
    <length>30</length>
    <type>Text</type>
</CustomField>