workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/NumeroPortal__c.field-meta.xml
<CustomField>
    <fullName>NumeroPortal__c</fullName>
    <label>NumeroPortal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>