workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/ObservacoesGerais__c.field-meta.xml
<CustomField>
    <fullName>ObservacoesGerais__c</fullName>
    <label>ObservacoesGerais</label>
    <length>255</length>
    <type>Text</type>
</CustomField>