workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/OrcamentoAfastamento__c.field-meta.xml
<CustomField>
    <fullName>OrcamentoAfastamento__c</fullName>
    <label>OrcamentoAfastamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>