workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/PaisesDestino__c.field-meta.xml
<CustomField>
    <fullName>PaisesDestino__c</fullName>
    <label>PaisesDestino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>