workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/Percentual__c.field-meta.xml
<CustomField>
    <fullName>Percentual__c</fullName>
    <label>Percentual</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>