workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/PossuiAfastados__c.field-meta.xml
<CustomField>
    <fullName>PossuiAfastados__c</fullName>
    <label>PossuiAfastados</label>
    <length>255</length>
    <type>Text</type>
</CustomField>