workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/PossuiTrackageBagagem__c.field-meta.xml
<CustomField>
    <fullName>PossuiTrackageBagagem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PossuiTrackageBagagem</label>
    <type>Checkbox</type>
</CustomField>