workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/PremioComercial__c.field-meta.xml
<CustomField>
    <fullName>PremioComercial__c</fullName>
    <label>PremioComercial</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>