workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/PremioPuroInterno__c.field-meta.xml
<CustomField>
    <fullName>PremioPuroInterno__c</fullName>
    <label>PremioPuroInterno</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>