workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/PremioPuroResseguro__c.field-meta.xml
<CustomField>
    <fullName>PremioPuroResseguro__c</fullName>
    <label>PremioPuroResseguro</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>