workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/PremioTotal__c.field-meta.xml
<CustomField>
    <fullName>PremioTotal__c</fullName>
    <label>PremioTotal</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>