workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/PrestadoresServicosEstagiarios__c.field-meta.xml
<CustomField>
    <fullName>PrestadoresServicosEstagiarios__c</fullName>
    <label>PrestadoresServicosEstagiarios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>