workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/ProtecaoParaQuem__c.field-meta.xml
<CustomField>
    <fullName>ProtecaoParaQuem__c</fullName>
    <label>ProtecaoParaQuem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>