workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/QuantidadeDias__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeDias__c</fullName>
    <label>QuantidadeDias</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>