workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/QuantidadeFuncionarios__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeFuncionarios__c</fullName>
    <label>QuantidadeFuncionarios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>