workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/QuantidadeMotoboys__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeMotoboys__c</fullName>
    <label>QuantidadeMotoboys</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>