workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/QuantidadeMotoristas__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeMotoristas__c</fullName>
    <label>QuantidadeMotoristas</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>