workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/QuantidadePassageiros070Anos__c.field-meta.xml
<CustomField>
    <fullName>QuantidadePassageiros070Anos__c</fullName>
    <label>QuantidadePassageiros070Anos</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>