workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/QuantidadePassageiros__c.field-meta.xml
<CustomField>
    <fullName>QuantidadePassageiros__c</fullName>
    <label>QuantidadePassageiros</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>