workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/QuantidadePassageirosIdosos__c.field-meta.xml
<CustomField>
    <fullName>QuantidadePassageirosIdosos__c</fullName>
    <label>QuantidadePassageirosIdosos</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>