workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/QuantidadePassageirosNaoIdosos__c.field-meta.xml
<CustomField>
    <fullName>QuantidadePassageirosNaoIdosos__c</fullName>
    <label>QuantidadePassageirosNaoIdosos</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>