workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/QuantidadeSocios__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeSocios__c</fullName>
    <label>QuantidadeSocios</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>