workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/QuantidadeVidas__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeVidas__c</fullName>
    <label>QuantidadeVidas</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>