workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/Sinistralidade__c.field-meta.xml
<CustomField>
    <fullName>Sinistralidade__c</fullName>
    <label>Sinistralidade</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>