workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/TaxaAnual__c.field-meta.xml
<CustomField>
    <fullName>TaxaAnual__c</fullName>
    <label>TaxaAnual</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>