workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/TaxaMensal__c.field-meta.xml
<CustomField>
    <fullName>TaxaMensal__c</fullName>
    <label>TaxaMensal</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>