workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/TaxaPura__c.field-meta.xml
<CustomField>
    <fullName>TaxaPura__c</fullName>
    <label>TaxaPura</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>