workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/TaxaPuraInterna__c.field-meta.xml
<CustomField>
    <fullName>TaxaPuraInterna__c</fullName>
    <label>TaxaPuraInterna</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>