workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/TaxaPuraResseguro__c.field-meta.xml
<CustomField>
    <fullName>TaxaPuraResseguro__c</fullName>
    <label>TaxaPuraResseguro</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>