workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/TaxaVigencia__c.field-meta.xml
<CustomField>
    <fullName>TaxaVigencia__c</fullName>
    <label>TaxaVigencia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>