workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/TempoPermanencia__c.field-meta.xml
<CustomField>
    <fullName>TempoPermanencia__c</fullName>
    <label>TempoPermanencia</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>