workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/TipoAdesao__c.field-meta.xml
<CustomField>
    <fullName>TipoAdesao__c</fullName>
    <label>TipoAdesao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>