workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/TipoCalculo__c.field-meta.xml
<CustomField>
    <fullName>TipoCalculo__c</fullName>
    <label>TipoCalculo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>