workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/TipoEvento__c.field-meta.xml
<CustomField>
    <fullName>TipoEvento__c</fullName>
    <label>TipoEvento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>