workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/TipoProtecao__c.field-meta.xml
<CustomField>
    <fullName>TipoProtecao__c</fullName>
    <label>TipoProtecao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>