workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/TipoSegurado__c.field-meta.xml
<CustomField>
    <fullName>TipoSegurado__c</fullName>
    <label>TipoSegurado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>