workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/TipoViagem__c.field-meta.xml
<CustomField>
    <fullName>TipoViagem__c</fullName>
    <label>TipoViagem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>