workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/TipoVigencia__c.field-meta.xml
<CustomField>
    <fullName>TipoVigencia__c</fullName>
    <label>TipoVigencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>