workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>