workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/TransferenciaCongenere__c.field-meta.xml
<CustomField>
    <fullName>TransferenciaCongenere__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TransferenciaCongenere</label>
    <type>Checkbox</type>
</CustomField>