workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/UtilizaMoto__c.field-meta.xml
<CustomField>
    <fullName>UtilizaMoto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UtilizaMoto</label>
    <type>Checkbox</type>
</CustomField>