workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/ViagemAventura__c.field-meta.xml
<CustomField>
    <fullName>ViagemAventura__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ViagemAventura</label>
    <type>Checkbox</type>
</CustomField>