workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/VidasEntre7074Anos__c.field-meta.xml
<CustomField>
    <fullName>VidasEntre7074Anos__c</fullName>
    <label>VidasEntre7074Anos</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>