workspace-sf/force-app/main/default/objects/Opportunity_Event__e/fields/VigenciaMenor365Dias__c.field-meta.xml
<CustomField>
    <fullName>VigenciaMenor365Dias__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VigenciaMenor365Dias</label>
    <type>Checkbox</type>
</CustomField>